2005-04-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html: fix link. 


	* site/switch/advantages.html: typos.

	* site/images/baer-ledger.png: add comment

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/browser-language.html: Fix link.

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install: New directory (WAS: download).  Update all links.
	This enables toplevel lilypond.org transition.

	* site/about/features.html: Fix rosegarden link.  Add close tags,
	indent-region.

2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: Reword Windows problem a bit after
	reading a newsgroup post.

2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/check-translation.py: Actually add.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Indent region.  Update.  Fix Debian
	and Fedora (previously: Red Hat) build instructions.

	* site/about/thanks.html (href): 
	* site/about/screenshots.html (href): 
	* site/about/faq.html (Han-Wen): Update documentation links to v2.4.

	* site/devel/index.html: Indent region.  Add CVS information.  Do
	not use "here" for link names.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/index.html: update INSTALL links.

2005-03-23  Graham Percival  <gperlist@shaw.ca>

	* site/switch/tour.html: removed link to Erich
	Rickheit's page.

2005-03-23  Matthias Kilian  <kili@outback.escape.de>

	* site/about/automated-engraving/benchmarking.html,
	* site/about/automated-engraving/engraving.html,
	* site/about/automated-engraving/formatting-architecture.html,
	* site/about/automated-engraving/implementing-notation.html,
	* site/about/automated-engraving/implementing-typography.html,
	* site/about/automated-engraving/software.html: minor editing.

2005-03-15  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/download/index.html: Add OpenBSD.

2005-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
