@@ -1,3 +1,7 @@
+2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site: More /download link fixes.
+
 2005-04-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/switch/index.html: fix link. 
